--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 ### requirements.txt ###
 
+redis==7.2.0
+fastapi==0.129.0
+pydantic==2.12.5
+uvicorn==0.41.0
+httpx==0.28.1
+
 # === Core numerics & IO ===
 
 # === Utilities ===
