--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ httpx==0.28.1
 
 # === Core numerics & IO ===
 
+litellm==1.81.13
+jinja2==3.1.6
+
 # === Utilities ===
 python-dotenv>=1.0
 colorlog==6.10.1
