--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,13 @@ httpx==0.28.1
 # === Core numerics & IO ===
 
 litellm==1.81.13
+lancedb==0.29.2
 jinja2==3.1.6
 google-auth==2.48.0
+torch==2.10.0+cpu
+torchvision==0.25.0+cpu
+pillow==12.0.0
+transformers==5.2.0
 
 # === Utilities ===
 python-dotenv>=1.0
