--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
-GOOGLE_APPLICATION_CREDENTIALS=aethelgard-vertex-sa-key.json
+GOOGLE_APPLICATION_CREDENTIALS="aethelgard-vertex-sa-key.json"
 PROJECT_ID="dev-aethelgard"
 REGION="us-central1"
 BUCKET_NAME="aethelgard-batch-data"
+HF_TOKEN=""
