--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ torch==2.10.0+cpu
 torchvision==0.25.0+cpu
 pillow==12.0.0
 transformers==5.2.0
+nicegui==3.7.1
 
 # === Utilities ===
 python-dotenv>=1.0
