--- a/profiles/node_a.env
+++ b/profiles/node_a.env
@@ -1,5 +1,5 @@
 NODE_ID=Hospital_A
-DB_PATH=./cache/lancedb_store_A
+DB_PATH=./.cache/lancedb_store_A
 TABLE_NAME=patients
 TEXT_MODEL=ollama/gemma3:4b
 LLM_API_BASE=http://localhost:11434
