--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
-    # Enabling appendonly creates the persistent /appendonlydir cache mentioned in your docs
+    # Enabling appendonly creates the persistent /appendonlydir .cache mentioned in your docs
     command: redis-server --appendonly yes
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
