--- a/profiles/node_b.env
+++ b/profiles/node_b.env
@@ -1,5 +1,5 @@
 NODE_ID=Hospital_B
-DB_PATH=./cache/lancedb_store_B
+DB_PATH=./.cache/lancedb_store_B
 TABLE_NAME=patients
 TEXT_MODEL=ollama/gemma3:4b
 LLM_API_BASE=http://localhost:11434
