added v2 of demo

--- a/profiles/node_a.env
+++ b/profiles/node_a.env
@@ -1,5 +1,6 @@
 NODE_ID=Hospital_A
 DB_PATH=./vector/lancedb_A
+SQLITE_PATH=./vector/file_state_A
 TABLE_NAME=patients
 TEXT_MODEL=ollama/gemma3:4b
 LLM_API_BASE=http://localhost:11434
